# test_squadron_discord_bot

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DeletemeBTN.py  ExportAllCode.ps1  FEATURE_PRESERVATION_COMPLETE.md  GenDailyToken.py  LICENSE  PRIVACY.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_COMPLETE.md  RSIBioVerify.py  RSIVerify.py  SECURITY.md  SETUP.md  SETUP.txt  TESTDatabase.db  TESTDatabase.db.bak_20260304_135624  VS_CODE_SETUP.md  WEB_DASHBOARD_SUMMARY.md  all_code.txt  announcement_leadership_log_services_summary.md  bot.py  bot.pyi  bot_tasks.py  botv2.py  commands.txt  constants.py  coverage.xml  dev_smoke_startup.py  discord-bot.code-workspace  docker-compose.yml  fix_foreign_key.sql  fix_tests.sh  fix_voice_tests.py  (+18 more)
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: duplicate-functions-refactor.md
.github/codeql/: codeql-config.yml
.github/instructions/: database.instructions.md  python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  codeql.yml  tests.yml
bot/adapters/: __init__.py  discord_gateway.py
bot/app/: __init__.py
bot/cogs/: voice_admin_cog.py  voice_runtime_cog.py
cogs/: __init__.py  admin.py  recheck.py  verification.py  voice.py
cogs/admin/: __init__.py  check_user.py  commands.py  legacy_commands.py  member_lifecycle.py  new_member_role_worker.py  recheck.py  role_delegation.py  (+1 more)
config/: __init__.py  config-example.yaml  config.example.yaml  config.yaml  config_loader.py  loader.py  schema.py
docs/: DRY_PATTERNS.md  code_review_fixes.md  log_error_fixes.md  recheck_feature_plan.md  unified_rate_limit_plan.md  unified_rate_limit_workflow.md  verification_service_architecture.md  verification_workflow.md  voice_admin_reset_implementation.md  voice_channel_refactoring.md  voice_setup_stale_jtc_cleanup.md
documents/: README.md  file-map.md
helpers/: __init__.py  announcement.py  announcement_bulk_cog.py  announcement_templates.py  atomic_write.py  audit.py  bot_protocol.py  bot_utils.py  bulk_check.py  circuit_breaker.py  cog_loader.py  constants.py  daily_activity_tracker.py  database.py  decorators.py  defensive_retry.py  discord_api.py  discord_reply.py  embeds.py  embeds_factory.py  embeds_voice.py  error_messages.py  handle_404.py  http_helper.py  leadership_log.py  leadership_log_models.py  logger.py  modals.py  permissions_helper.py  rate_limiter.py  recheck_service.py  retry.py  role_helper.py  role_ids.py  role_select_utils.py  schema.py  schema_validation.py  secure_random.py  snapshots.py  structured_errors.py  (+21 more)
logs/: bot.log.2025-09-22  bot.log.2025-09-23  bot.log.2025-09-24
migrations/: 000_initial_schema.sql  001_metrics_schema.sql  002_new_member_roles.sql  003_add_last_recheck.sql  003_ticketing_system.sql  004_create_rate_limits.sql  004_ticket_enhancements.sql  005_add_community_moniker.sql  005_ticket_form_system.sql  006_guild_voice_channel_support.sql  006_ticket_form_select_questions.sql  007_add_voice_indexes.sql  007_ticket_category_allowed_statuses.sql  008_add_announcement_events.sql  008_add_verification_message_table.sql  008_ticket_deleted_at.sql  009_multiple_channels_per_owner.sql  009_ticket_channel_configs.sql  010_add_org_sids.sql  010_ticket_public_button.sql  011_add_guild_id_to_announcement_events.sql  011_remove_membership_status.sql  011_ticket_button_colors_order.sql  012_add_guild_id_to_announcement_events.sql  012_ticket_category_role_prerequisites.sql  013_remove_membership_status_from_verification.sql  014_add_discord_managers_and_staff.sql  014_rollback_permission_system.sql  015_remove_legacy_lead_moderators.sql  016_add_role_delegation_policies.sql
prompts/: README.md
scripts/: clear_voice_settings.sh  migrate.py  migrate_lead_mods_to_moderators.py  migrate_roles_to_db.py  staging_dry_run.py  validate.py
services/: __init__.py  base.py  config_service.py  container.py  event_sync_service.py  guild_config_helper.py  guild_config_service.py  guild_service.py  guild_sync.py  health_service.py  internal_api.py  internal_api_metrics_mixin.py  log_cleanup.py  log_retention.py  metrics_activity.py  metrics_buckets.py  metrics_flush.py  metrics_models.py  metrics_queries.py  metrics_read.py  metrics_service.py  new_member_role_service.py  role_delegation_service.py  service_container.py  service_manager.py  ticket_form_service.py  ticket_rate_limiter.py  ticket_service.py  verification_bulk_service.py  verification_scheduler.py  verification_state.py  voice_base_mixin.py  voice_channel_helpers.py  voice_channel_mixin.py  voice_create_mixin.py  voice_jtc_mixin.py  voice_reconcile_mixin.py  voice_service.py  voice_settings_mixin.py  voice_setup_mixin.py  (+1 more)
tests/: conftest.py  sample_rsi_organizations.html  sample_rsi_profile.html  test_admin_config_choices.py  test_admin_list_functionality.py  test_admin_recheck_updates.py  test_admin_status.py  test_announcement_helpers.py  test_announcement_logic.py  test_bot_startup.py  test_bulk_check.py  test_check_user_activity.py  test_circuit_breaker.py  test_command_handlers.py  test_config_loader_validation.py  test_config_refresh.py  test_config_service_get.py  test_daily_activity.py  test_database_helpers.py  test_database_migration.py  test_db_helper_extracts.py  test_embeds.py  test_enhanced_workflow.py  test_ensure_verification_row.py  test_error_messages.py  test_event_sync_service.py  test_guild_config_service.py  test_help_command.py  test_helpers.py  test_info_privacy_command.py  test_internal_api_auth.py  test_internal_api_scheduled_events.py  test_is_valid_rsi_handle_moniker.py  test_leadership_log.py  test_metrics_activity.py  test_metrics_events.py  test_metrics_service.py  test_modern_admin_recheck.py  test_multi_guild_verification.py  test_new_member_role.py  (+69 more)
tools/: check_modularity.py  rsi_probe.py
utils/: __init__.py  about_metadata.py  errors.py  log_context.py  logging.py  tasks.py  types.py
verification/: __init__.py  rsi_verification.py  rsi_verification_enhanced.py
web/: QUICKSTART.md  README.md
(+235 files in other folders)
